@@ -127,6 +127,11 @@
 	  TAO's COS Notification Service implementation.
 	</P>
       </LI>
+      <LI><P><A HREF="tao/costime/index.html">TAO_CosTime:
+	  </A>
+    TAO's COS Time Service implementation.
+	</P>
+      </LI>
       <LI><P><A HREF="tao/av/index.html">TAO_AV:
 	  </A>
 	  TAO's Audio/Video Streaming Service implementation.
